--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>Hey! It's Anastasia! </h1>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="main.css" />
+    <script src="main.js"></script>
+  </head>
+  <body>
+    <main><h1>My page!</h1></main>
+  </body>
+</html>
